--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -631,11 +631,18 @@ body.dark-theme {
 
 .new__img {
   width: 100px;
+  height: 200px;
 }
 
 .new__title {
   font-size: var(--h2-font-size);
   margin-bottom: .5rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+   /* Limit to 2 lines */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  max-height: 3em;
 }
 
 .new__prices {
