--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -130,7 +130,8 @@ body.dark-theme {
 }
 
 .dark-theme .search,
-.dark-theme .login {
+.dark-theme .login,
+.dark-theme .register  {
   background-color: hsla(230, 12%, 8%, .6);
 }
 
@@ -324,7 +325,7 @@ body.dark-theme {
 
 
 /*=============== LOGIN ===============*/
-.login {
+.login, .register {
   position: fixed;
   top: -100%;
   left: 0;
@@ -339,22 +340,22 @@ body.dark-theme {
   transition: top .4s;
 }
 
-.login__form {
+.login__form, .register__form {
   background-color: var(--container-color);
   padding: 2rem 1.5rem;
   border: 2px solid var(--border-color);
   row-gap: 1.25rem;
 }
 
-.login__title {
+.login__title, .register__title {
   font-size: var(--h2-font-size);
 }
 
-.login__group {
+.login__group, .register__group {
   row-gap: 1.25rem;
 }
 
-.login__label {
+.login__label, .register__label {
   display: block;
   text-align: initial;
   color: var(--title-color);
@@ -362,7 +363,7 @@ body.dark-theme {
   margin-bottom: .25rem;
 }
 
-.login__input {
+.login__input, .register__input {
   width: 100%;
   background-color: var(--container-color);
   border: 2px solid var(--border-color);
@@ -371,12 +372,14 @@ body.dark-theme {
 }
 
 .login__signup,
-.login__forgot {
+.login__forgot,
+.register__signup,
+.register__forgot {
   display: block;
   font-size: var(--small-font-size);
 }
 
-.login__signup {
+.login__signup, .register__signup {
   margin-bottom: .5rem;
 }
 
@@ -390,12 +393,12 @@ body.dark-theme {
   margin-bottom: 1.25rem;
 }
 
-.login__button {
+.login__button , .register__button{
   width: 100%;
   cursor: pointer;
 }
 
-.login__close {
+.login__close, .register__close {
   position: absolute;
   top: 2rem;
   right: 2rem;
@@ -404,8 +407,9 @@ body.dark-theme {
   cursor: pointer;
 }
 
+
 /* Show login */
-.show-login {
+.show-login, .show-register {
   top: 0;
 }
 
@@ -511,7 +515,7 @@ body.dark-theme {
   font-size: var(--h2-font-size);
   margin-bottom: .5rem;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
    /* Limit to 2 lines */
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -638,7 +642,7 @@ body.dark-theme {
   font-size: var(--h2-font-size);
   margin-bottom: .5rem;
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
    /* Limit to 2 lines */
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -901,7 +905,8 @@ body.dark-theme {
     width: 500px;
     margin-inline: auto;
   }
-  .login__form{
+  .login__form,
+  .register__form{
     width: 400px;
     justify-self: center;
   }
@@ -913,6 +918,15 @@ body.dark-theme {
     right: 0;
     margin-inline: auto;
   }
+
+  .register__close{
+    width: max-content;
+    top: 3rem;
+    left: 21rem;
+    right: 0;
+    margin-inline: auto;
+  }
+
   .nav__menu {
     width: 380px;
     margin-inline: auto;
