--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,6 +146,9 @@ body.dark-theme {
 .dark-theme::-webkit-scrollbar-thumb:hover {
   background-color: hsl(230, 16%, 35%);
 }
+/* .dark-theme .featured__actions button, .ri-eye-line{
+  color: #fff;
+} */
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -200,7 +203,7 @@ body.dark-theme {
 .nav__logo {
   display: flex;
   align-items: center;
-  column-gap: 5rem;
+  column-gap: 1rem;
   color: var(--first-color);
   font-weight: var(--font-medium);
 }
@@ -330,9 +333,12 @@ body.dark-theme {
 
 
 /*=============== LOGIN ===============*/
+.text-danger {
+  color: red;
+}
 .login, .register {
   position: fixed;
-  top: -100%;
+  top: -120%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -512,6 +518,7 @@ body.dark-theme {
   position: relative;
   text-align: center;
   background-color: var(--container-color);
+  height: 330px;
   padding: 2rem;
   overflow: hidden;
   border: 2px solid var(--border-color);
@@ -566,7 +573,7 @@ body.dark-theme {
   transition: right .4s;
 }
 
-.featured__actions button {
+.featured__actions button, .ri-eye-line {
   background: none;
   font-size: 1.25rem;
   color: var(--first-color);
@@ -595,6 +602,18 @@ body.dark-theme {
   transition: border .4s background-color .4s;
 }
 
+.featured__swiper:nth-child(1) {
+  margin-bottom: 2rem;
+}
+
+.see__more {
+  margin-left: 50rem;
+  color: rgb(2, 88, 132);  
+}
+.see__more:hover {
+  margin-left: 50rem;
+  color: blue;  
+}
 /*=============== DISCOUNT ===============*/
 .discount__container {
   row-gap: 3.5rem;
@@ -634,7 +653,7 @@ body.dark-theme {
 .new__card {
   display: flex;
   align-items: center;
-  column-gap: 2.5rem;
+  column-gap: 1.5rem;
   background-color: var(--container-color);
   padding: 1.5rem 1rem;
   color: var(--text-color);
@@ -897,6 +916,7 @@ body.dark-theme {
     grid-template-columns: 1fr;
     row-gap: 2rem;
   }
+  
 
 }
 
@@ -956,6 +976,7 @@ body.dark-theme {
   .footer__data{
     grid-template-columns: repeat(3, max-content);
   } 
+  
 }
 
 @media screen and (min-width: 768px){
@@ -980,6 +1001,7 @@ body.dark-theme {
     grid-template-columns: repeat(2, max-content);
     justify-content: space-between;
   }
+  
 }
 
 
@@ -1052,7 +1074,7 @@ body.dark-theme {
     padding: 1.5rem;
   }
   .new__img{
-    width: 120px;
+    width: 140px;
   }
   .new__title{
     font-size: var(--h3-font-size);
