--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -193,6 +193,8 @@ body.dark-theme {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  /* padding: 4rem; */
 }
 
 .logo {
