--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -87,7 +87,7 @@
     position: absolute;
     top: -8px;
     right: -8px;
-    background-color: red;
+    background-color: blue;
     color: white;
     font-size: 10px;
     font-weight: bold;
