--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -27,8 +27,12 @@
         margin-bottom: 1rem;
     }
 
-    .book-meta p {
-        margin: 0.2rem 0;
+    .book-meta p, .prices p {
+        margin: 2rem 0;
+    }
+
+    strong {
+        margin-right: 1rem;
     }
 
     .book-description {
